Add shebang support to static analysis
Since luau-lsp does not understand shebangs, create a wrapper script
that temporarily strips them before analysis and restores them after.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,7 @@ jobs:
         run: lune setup --no-update-luaurc
 
       - name: Run static analysis
-        run: luau-lsp analyze --platform standard --ignore "DevPackages/**" --ignore "Packages/**" .
+        run: lune run ./Scripts/RunStaticAnalysis.luau
 
   changelog:
     name: Check changelog format
