--- a/.github/workflows/release-checks.yml
+++ b/.github/workflows/release-checks.yml
@@ -94,7 +94,7 @@ jobs:
         run: lune setup --no-update-luaurc
 
       - name: Run static analysis
-        run: luau-lsp analyze --platform standard .
+        run: lune run ./Scripts/RunStaticAnalysis.luau
 
   json-format:
     name: Check JSON format
@@ -131,6 +131,9 @@ jobs:
 
       - name: Check version update
         run: lune run ./Scripts/EnsureProperVersionUpdate.luau
+
+      - name: Check version match
+        run: lune run ./Scripts/CheckVersionMatch.luau
 
       - name: Check changelog entry
         run: lune run ./Scripts/CheckChangelogVersion.luau
