Add JSON format check and WALLY_AUTH verification (#9)
## Summary
- Add JSON format check using Prettier
- Add dev.project.json for local development
- Fix release checks for shebang support and version match
- Add WALLY_AUTH secret verification for Wally packages

## Changes
- New check: JSON files must be properly formatted with Prettier
- New check: WALLY_AUTH secret must be configured for repos with
wally.toml
- Fixed static analysis to handle shebangs properly
- Fixed version validation in release checks

--- a/.github/workflows/release-checks.yml
+++ b/.github/workflows/release-checks.yml
@@ -94,7 +94,53 @@ jobs:
         run: lune setup --no-update-luaurc
 
       - name: Run static analysis
-        run: luau-lsp analyze --platform standard .
+        run: lune run ./Scripts/RunStaticAnalysis.luau
+
+  json-format:
+    name: Check JSON format
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Install Prettier
+        run: npm install -g prettier
+
+      - name: Setup Rokit
+        uses: CompeyDev/setup-rokit@v0.1.2
+
+      - name: Check JSON format
+        run: lune run ./Scripts/CheckJsonFormat.luau
+
+  wally-auth:
+    name: Verify Wally auth
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Check WALLY_AUTH secret
+        env:
+          WALLY_AUTH: ${{ secrets.WALLY_AUTH }}
+        run: |
+          # Only check if this is a Wally package (has wally.toml)
+          if [ ! -f "wally.toml" ]; then
+            echo "No wally.toml found, skipping WALLY_AUTH check."
+            exit 0
+          fi
+
+          if [ -z "$WALLY_AUTH" ]; then
+            echo "::error::WALLY_AUTH secret is not configured. This is required for publishing to Wally."
+            echo "::error::Add the secret using: gh secret set WALLY_AUTH < ~/.wally/auth.toml"
+            exit 1
+          fi
+
+          echo "WALLY_AUTH secret is configured."
 
   version:
     name: Validate version
@@ -110,6 +156,9 @@ jobs:
 
       - name: Check version update
         run: lune run ./Scripts/EnsureProperVersionUpdate.luau
+
+      - name: Check version match
+        run: lune run ./Scripts/CheckVersionMatch.luau
 
       - name: Check changelog entry
         run: lune run ./Scripts/CheckChangelogVersion.luau
