Skip Wally auth check for private packages
When wally.toml contains private = true, the package won't be published
to Wally, so WALLY_AUTH secret is not required.

--- a/.github/workflows/release-checks.yml
+++ b/.github/workflows/release-checks.yml
@@ -128,9 +128,15 @@ jobs:
         env:
           WALLY_AUTH: ${{ secrets.WALLY_AUTH }}
         run: |
-          # Only check if this is a Wally package (has wally.toml)
+          # Skip if no wally.toml exists
           if [ ! -f "wally.toml" ]; then
             echo "No wally.toml found, skipping WALLY_AUTH check."
+            exit 0
+          fi
+
+          # Skip if this is a private package (won't be published to Wally)
+          if grep -q '^private = true' wally.toml; then
+            echo "Private package detected, skipping WALLY_AUTH check."
             exit 0
           fi
 
